Fixed issue where one story got behind submenu

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,7 @@
   background-color: #4169e0;
   font-size: 13px;
   padding: 16px 0;
+  margin-bottom: 100px;
 }
 
 .headerLeft {
