--- a/src/components/submenu/submenu.css
+++ b/src/components/submenu/submenu.css
@@ -1,6 +1,7 @@
 .submenuWrapper {
   background-color: #fa8072;
   position: fixed;
+  top: 0;
   width: 100%;
   height: 40px;
   display: flex;
